--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         <div class="dropdown">
             <button class="dropbtn">GALLERY &#9662;</button>
             <div class="dropdown-content">
-                <a href="Gallery.html">Collection</a>
+                <a href="Index2.html">Collection</a>
             </div>
         </div>
     </nav>
