Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="dropdown">
             <button class="dropbtn">GALLERY &#9662;</button>
             <div class="dropdown-content">
-                <a href="Index2.html">Collection</a>
+                <a href="index2.html">Collection</a>
             </div>
         </div>
     </nav>
